# memex-lab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  workflow.txt
.github/: pull_request_template.md
.github/workflows/: python-syntax-check.yml
audit/: __init__.py  __main__.py  config.py  io.py  sections.py
candidateaudit/: __init__.py  __main__.py  config.py  io.py  sections.py
collector/: config.py  main.py
collector/listeners/: migration_logs.py  pumpfun_logs.py
collector/models/: feature_snapshot.py  migration_event.py  token_event.py
collector/parsers/: create_event.py  migrate_event.py
collector/snapshots/: __init__.py  __main__.py  builder.py
collector/storage/: jsonl_writer.py
console/: __init__.py  __main__.py  commands.py  runner.py  status.py
docs/: github-setup.md  m1-collector-scope.md  m10-plan.md  m11-plan.md  m12-plan.md  m13-plan.md  m14-plan.md  m15-plan.md  m16-plan.md  m17-plan.md  m18-plan.md  m19-plan.md  m2-plan.md  m20-plan.md  m21-plan.md  m3-scorer-v0.md  m4-plan.md  m5-plan.md  m6-plan.md  m7-plan.md  m8-plan.md  m9-plan.md  manual-test-plan.md  project-brief.md  tech-decision.md
memex_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
operatorsnapshot/: __init__.py  __main__.py
orchestrator/: __init__.py  __main__.py
pipelinehealth/: __init__.py  __main__.py
reviewexport/: __init__.py  __main__.py
reviewfeedback/: __init__.py  config.py  io.py  record.py  report.py
reviewkit/: __init__.py  config.py  export.py  io.py  label.py  report.py
reviewloopmetrics/: __init__.py  __main__.py
scorer/: __init__.py  __main__.py  compare.py  config.py  engine.py  io.py  rules.py  rules_v1.py  rules_v2.py
scorer/models/: __init__.py  scored_snapshot.py
screener/: __init__.py  __main__.py  config.py  engine.py  rules.py
screener/models/: __init__.py  filtered_snapshot.py
selector/: __init__.py  __main__.py  alignment.py  compare.py  config.py  io.py  rules.py  rules_v2.py
