[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memex-lab"
version = "0.1.0"
description = "Collector-first research framework for low market cap Solana memecoins."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12,<16",
    "python-dotenv>=1,<2",
    "base58>=2.1,<3",
]

[project.scripts]
memex-collector = "collector.main:main"
memex-scorer = "scorer.__main__:main"
memex-scorer-compare = "scorer.compare:main"
memex-screener = "screener.__main__:main"
memex-review-report = "reviewkit.report:main"
memex-review-export = "reviewkit.export:main"
memex-review-label = "reviewkit.label:main"
memex-dataset-audit = "audit.__main__:main"
memex-selector = "selector.__main__:main"
memex-selector-compare = "selector.compare:main"
memex-candidateaudit = "candidateaudit.__main__:main"
memex-review-outcome = "reviewfeedback.record:main"
memex-review-feedback-report = "reviewfeedback.report:main"
memex-console = "console.__main__:main"
memex-orchestrator = "orchestrator.__main__:main"
memex-reviewexport = "reviewexport.__main__:main"
memex-reviewloopmetrics = "reviewloopmetrics.__main__:main"

[tool.setuptools.packages.find]
include = ["collector*", "scorer*", "screener*", "reviewkit*", "audit*", "selector*", "candidateaudit*", "reviewfeedback*", "console*", "orchestrator*", "reviewexport*", "reviewloopmetrics*"]
